# website

./: .gitignore  Cargo.toml  accounts.db
consultations_files/b3e2ceae-d49d-4f24-b288-f07830325b52/: anonymos
privileged_site/ar/: admin.html  main.html
site/: robots.txt  sitemap.xml
site/ar/: contributors.json  index.html  login.html  register.html  specialties.json
site/ar/js/: index.js  login.js  register.js
site/css/: index.css  login.css
src/: config.rs  database.rs  main.rs
src/accounts_managment/: endpoints.rs  login.rs  misc_endpoints.rs  mod.rs  register.rs
src/consultations_handler/: mod.rs  upload.rs
src/join_form_handler/: form.rs  mod.rs
