[package]
name = "tired"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.6"
actix-web = "4.9.0"
argon2 = "0.5.3"
bcrypt = "0.16.0"
chrono = "0.4.39"
colorize = "0.1.0"
env_logger = "0.11.6"
rayon = "1.10.0"
reqwest = { version = "0.12.12", features = ["blocking"] }
rusqlite = { version = "0.33.0", features = ["bundled"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
uuid = { version = "1.13.1", features = ["v4"] }
tokio = {version="1.37.0", features=["macros", "rt-multi-thread", "fs"]}
actix-multipart = "0.6.1"
futures = "0.3.31"
